--- a/docs/css/style_cv.css
+++ b/docs/css/style_cv.css
@@ -121,7 +121,7 @@ img{
   color: black;
   font-weight: bold;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1.rem;
+  font-size: 1.5rem;
   text-align: left;
   
 }
